--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
+*.arrow filter=lfs diff=lfs merge=lfs -text
 data/data-00000-of-00001.arrow filter=lfs diff=lfs merge=lfs -text
+* !text -filter -merge -diff
